# sneshacking

./: .travis.yml  README.md
Aladdin/: Aladdin.smc  Aladdinsave-1.bst  Aladdinsave.smc  Aladdinsave.srm  main.asm  patchrom.bat  save.asm  save_cfg.asm
Lua/: Mr Nutz snes9x-bizhawk - Copie.lua  Mr Nutz snes9x-bizhawk.lua  alttp colision.lua  donaldduck.lua  soestuff.lua
QtStuff/: QtStuff.pro  fieldstablewidget.cpp  fieldstablewidget.h  main.cpp  mglobal.h  mytype.cpp  mytype.h  rom.cpp  rom.h  romviewer.cpp  romviewer.h  romviewer.ui  snesstruc.cpp  snesstruct.h  snestype.cpp  snestype.h  wramentrydisplay.cpp  wramentrydisplay.h  wramentrydisplay.ui  wramentryeditor.cpp  wramentryeditor.h  wramentryeditor.ui  wrammap.cpp  wrammap.h  wrammapeditor.cpp  wrammapeditor.h  wrammapeditor.ui
QtStuff/asm/: asmline.h  asmtextblock.cpp  (+10 more)
SoE/: Editor roadmap.txt  patchmerge.bat  patchplop.bat  patchsave.bat  save.asm  save_cfg.asm  soemodif.asm  soepractice.asm  soesavemain.asm
Terranigma/: macros.asm  patchrom.bat  save.asm  save_cfg.asm  terramain.asm  terrapractice.asm
alttp/: inputdisplay.asm  patchrom.bat  shuffleinput.asm
alttp/src/test/: CMakeLists.txt  testdecompress.c  testpalette.c  testrommaping  testrommapping.c  testtile.c
alttp/src/test/.kdev4/: test.kdev4
scompress/: CMakeLists.txt  Readme.txt  scompress.c  scompress.h  utils.c
src/: CMakeLists.txt  decompress.c  decompress.h  mapping_hirom.c  mapping_lorom.c  palette.c  palette.h  rominfo.c  rominfo.h  rommapping.h  savestateloader.c  savestateloader.h  testpng.c  tile.c  tile.h  tilepng.c  tilepng.h
(+25 files in other folders)
